[package]
name = "exe_who"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
ctrlc = "3.2.3"
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.29", features = ["cargo"] }
regex = "1.7.0"
lazy_static = "1.4.0"
sysinfo = "0.27.2"